# nervemq

./: .gitignore  Cargo.toml  README.md  bacon.toml  bun.lockb  components.json  creek.db  creek.db-shm  creek.db-wal  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
actions/: api.ts
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/admin/: page.tsx
app/(dashboard)/api-keys/: page.tsx
app/(dashboard)/namespaces/: page.tsx
app/(dashboard)/queues/: list.tsx  page.tsx
app/(dashboard)/queues/[...queueId]/: page.tsx
app/(dashboard)/queues/[queueId]/: page.tsx
app/api-keys/: page.tsx
app/login/: page.tsx
app/namespaces/: page.tsx
app/queues/: page.tsx
app/queues/[queueId]/: page.tsx
components/: access-denied.tsx  auth-verifier.tsx  create-api-key.tsx  create-namespace.tsx  create-queue.tsx  create-user.tsx  data-table.tsx  header.tsx  key-value-pairs.tsx  modify-user.tsx  not-found.tsx  queue-settings.tsx  sidebar.tsx  table-header.tsx  theme.tsx
components/admin/: table.tsx
components/api-keys/: table.tsx
components/namespaces/: table.tsx
components/queues/: table.tsx
components/ui/: sidebar.tsx
examples/node.js/: bun.lockb  index.ts  package-lock.json  package.json  tsconfig.json
examples/node.js/nervemq_example/: README.md  bun.lockb  index.ts
examples/python/: pyproject.toml
examples/python/nervemq_example/: __init__.py  main.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
hooks/: use-verify.tsx
lib/: auth.ts  utils.ts
lib/actions/: api.ts
lib/components/: auth-verifier.tsx  create-api-key.tsx  create-namespace.tsx  create-queue.tsx  create-user.tsx  data-table.tsx  header.tsx  key-value-pairs.tsx  modify-user.tsx  queue-settings.tsx  sidebar.tsx  table-header.tsx
lib/components/admin/: table.tsx
lib/components/api-keys/: table.tsx
lib/components/ui/: command.tsx  sidebar.tsx
lib/contexts/: key-to-delete.tsx
lib/hooks/: use-click-outside.tsx  use-invalidate.tsx  use-verify.tsx
lib/schemas/: create-queue.ts  create-user.ts  delete-queue.ts  login-form.ts  modify-user.ts  queue-settings.ts
lib/state/: global.ts
migrations/: 0001_init.down.sql  0001_init.up.sql  0001_initialization.down.sql  0001_initialization.up.sql
schemas/: create-namespace.ts  create-queue.ts  create-user.ts  login-form.ts  modify-user.ts  queue-settings.ts
src/: api.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  message.rs  models.rs  namespace.rs  queue.rs  service.rs  utils.rs
src/api/: admin.rs  auth.rs  data.rs  mod.rs  namespace.rs  queue.rs  sqs.rs  tokens.rs
src/auth/: api.rs  credential.rs  crypto.rs  data.rs  error.rs  header.rs  middleware.rs  mod.rs  session.rs  token.rs
src/auth/kms/: aws.rs  memory.rs  mod.rs
src/auth/middleware/: api_keys.rs  authentication.rs  mod.rs  protected_route.rs
src/auth/protocols/: mod.rs  nervemq.rs  sigv4.rs
src/db/: message.rs  mod.rs  namespace.rs  queue.rs
src/kms/: sqlite.rs
src/sqs/: method.rs  mod.rs  service.rs  types.rs
tests/: creek.db  creek.db-shm  creek.db-wal  integration.rs
