[package]
name = "nervemq"
version = "0.1.0"
edition = "2021"

[lib]
name = "nervemq"
path = "src/lib.rs"

[[bin]]
name = "nervemq"
path = "src/main.rs"


[dependencies.actix-cors]
git = "https://github.com/fortress-build/actix-extras"
branch = "master"

[dependencies.actix-session]
git = "https://github.com/fortress-build/actix-extras"
branch = "master"
features = ["cookie-session"]

[dependencies.actix-identity]
git = "https://github.com/fortress-build/actix-extras"
branch = "master"

[dependencies]
actix-casbin = { version = "1.1.0", default-features = false, features = [
  "runtime-tokio",
  "tokio",
] }
actix-casbin-auth = { version = "1.1.0", default-features = false, features = [
  "runtime-tokio",
  "tokio",
] }

actix-web = { version = "4.9.0", features = [
  "actix-tls",
  # "openssl",
  "cookies",
  "macros",
  "secure-cookies",
] }
anyhow = "1.0.93"
argon2 = { version = "0.5.3", features = ["simple", "std", "zeroize"] }
base64 = "0.22.1"
chrono = "0.4.38"
envy = "0.4.2"
eyre = "0.6.12"
# openssl = "0.10.9"
pom = "3.4.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde-email = "3.1.0"
serde_json = "1.0.133"
sha2 = { version = "0.10.8", features = ["oid", "sha2-asm", "compress"] }
snafu = "0.8.5"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "sqlite",
  "tls-native-tls",
  "uuid",
  "chrono",
  "json",
  "time",
  "macros",
] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-actix-web = "0.7.15"
tracing-subscriber = { version = "0.3.18", features = ["tracing", "serde"] }
zeroize = { version = "1.8.1", features = ["serde", "derive"] }

[dev-dependencies]
tempfile = "3.14.0"
