[package]
name = "nervemq"
version = "0.1.0"
edition = "2021"

[lib]
name = "nervemq"
path = "src/lib.rs"

[[bin]]
name = "nervemq"
path = "src/main.rs"


[dependencies.actix-cors]
git = "https://github.com/fortress-build/actix-extras"
branch = "master"

[dependencies.actix-session]
git = "https://github.com/fortress-build/actix-extras"
branch = "master"
features = ["cookie-session"]

[dependencies.actix-identity]
git = "https://github.com/fortress-build/actix-extras"
branch = "master"

[dependencies]
actix-http = "3.9.0"
actix-web = { version = "4.9.0", features = [
  "actix-tls",
  # "openssl",
  "cookies",
  "macros",
  "secure-cookies",
] }
anyhow = "1.0.93"
argon2 = { version = "0.5.3", features = ["simple", "std", "zeroize"] }
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = { version = "0.5.1", features = ["sha2"] }
bytes = { version = "1.9.0", features = ["serde"] }
chrono = "0.4.38"
envy = "0.4.2"
eyre = "0.6.12"
futures-util = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
hmac = { version = "0.12.1", features = ["std"] }
md5 = "0.7.0"
pom = "3.4.0"
rand = "0.8.5"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-email = "3.1.0"
serde_json = "1.0.133"
sha2 = { version = "0.10.8", features = ["oid", "sha2-asm", "compress"] }
snafu = "0.8.5"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "sqlite",
  "tls-native-tls",
  "uuid",
  "chrono",
  "json",
  "time",
  "macros",
] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json", "bincode", "serde", "educe"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-actix-web = "0.7.15"
tracing-subscriber = { version = "0.3.18", features = [
  "tracing",
  "serde",
  "json",
  "env-filter",
] }
url = { version = "2.5.4", features = ["serde"] }
zeroize = { version = "1.8.1", features = ["serde", "derive"] }

[dev-dependencies]
tempfile = "3.14.0"
